# Job-Hunter

./: .gitignore  AGENTS.md  CLAUDE.md  CONNECTOR_GUIDE.md  HANDOFF.md  PROFILE_INPUT_GUIDE.md  PROGRESS.md  PROVIDER_GUIDE.md  README.md  config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
Documents/: DECISIONS.md  JobHunter_DEV_PLAN_v1.0.md  JobHunter_SDD_v1.1.md  JobHunter_SOW_v1.1.md  PRODUCT_NOTES.md  UI_UX_DESIGN_PROMPT.md
ai_providers/: README.md
connectors/: README.md
core/: AGENTS.md  __init__.py  config.py  logging.py  output.py  pipeline.py  progress.py  runner.py  walking_skeleton.py
design/: AGENTS.md
fixtures/: AGENTS.md  jobs.json
profile_inputs/: README.md
tests/: test_adzuna_connector.py  test_adzuna_pagination.py  test_auth_strategy.py  test_authoring_docs.py  test_base_ai_provider.py  test_base_connector.py  test_cli_auth_cmd.py  test_cli_config_cmd.py  test_cli_run.py  test_config.py  test_ddg_connector.py  test_gemini_provider.py  test_logging.py  test_mock_connector.py  test_models.py  test_ollama_provider.py  test_openrouter_provider.py  test_output.py  test_parsing_fence.py  test_pipeline.py  test_profile_inputs.py  test_progress.py  test_provider_retry.py  test_runner_build_runner.py  test_runner_orchestrator.py  test_runner_plugin_discovery.py  test_runner_provider_config.py  test_scaffold.py  test_session_store.py  test_sidecar.py  test_walking_skeleton.py  test_workflow_harness.py
tools/: AGENTS.md  README.md  __init__.py  chunks.json  jh.py  jh_config.json  jh_engine.py  jh_project.py
ui/: __init__.py
(+85 files in other folders)
